[feat] Added login & register functionatily.
